--- a/bm_main_re/css/element.css
+++ b/bm_main_re/css/element.css
@@ -259,10 +259,10 @@ textarea:focus{border:1px solid #666; background:#f9f9f9}
 /* custom */
 *{width: 100%; height: auto; background-size: cover; background-position: center; background-repeat: no-repeat;}
 html,body,ul,ol,li,img,div,span,iframe,a,p,input,textarea,select,i{
-	font-family:'Roboto','Noto Sans KR', sans-serif; font-weight:400; font-style:normal; font-size:16px; word-break:keep-all; color:#222;text-decoration: none;
+	font-family:'Roboto','맑은 고딕', sans-serif; font-weight:400; font-style:normal; font-size:16px; word-break:keep-all; color:#222;text-decoration: none;
 }
 html,body{overflow-x: hidden; min-width: 360px;}
-img{width: 100%; vertical-align: middle;}
+img{width: auto; vertical-align: middle;}
 h1,h2,h3,h4,h5,h6,p,div,span{letter-spacing: -1px;}
 h2{font-size: 60px; text-align: left;}/*80px*/
 h3{font-size: 24px;}
@@ -283,6 +283,7 @@ div.btn{
 }
 .pc{}
 .mo{display: none;}
+
 
 .mt40{
 	margin-top: 40px;
