--- a/bm_main_re/css/default.css
+++ b/bm_main_re/css/default.css
@@ -3,11 +3,9 @@ header {
     height: auto;
     border-bottom: 1px solid #d0d0d0;
 }
-
 header img {
     width: auto;
 }
-
 header div.head {
     padding: 30px 0px;
     border-bottom: 1px solid #d0d0d0;
@@ -57,7 +55,13 @@ header div.head div.head_caption div.line {
     vertical-align: middle;
     margin: 0px 20px;
 }
+header div.head div.ham_btn{width: 25px; height: 25px;  float: right; padding-top: 5px; cursor: pointer;}
+header div.head div.ham_btn > div{width: 100%; height: 2px; background-color: #222;margin-bottom: 5px;}
+header div.head div.ham_btn > div:nth-child(3){width: 50%;float: right;}
 
+div.gnb ul{
+    text-align: center;
+}
 div.gnb ul li {
     width: calc(100%/7);
     margin-left: -4px;
@@ -161,11 +165,15 @@ section.main.con2 div.left_application img {
 }
 
 section.main.con2 div.left_application div.btn {
-	border: 3px solid #fff;
+    border: 3px solid #fff;
     color: #fff;
     margin-top: 30px;
 }
-section.main.con2 div.application h3{font-weight: bold;}
+
+section.main.con2 div.application h3 {
+    font-weight: bold;
+}
+
 section.main.con2 div.application h3,
 section.main.con2 div.application p {
     color: #fff;
@@ -182,42 +190,155 @@ section.main.con2 div.right_application p {
     color: #222;
     text-align: center;
 }
-section.main.con2 div.right_application div.input_area{margin: 20px 0px; padding-left: 50px;}
+
+section.main.con2 div.right_application div.input_area {
+    margin: 20px 0px;
+    padding-left: 50px;
+}
+
 section.main.con2 div.right_application input[type=text],
-section.main.con2 div.right_application div.submit
-{display: inline-block; max-width: 180px; height: 50px; vertical-align: middle; margin-right: 10px; box-sizing: border-box;}
-section.main.con2 div.right_application div.input_area input[type=text]{border: 1px solid #d0d0d0;}
-section.main.con2 div.right_application div.checkbox{margin-left: 50px;}
-section.main.con2 div.right_application div.submit{max-width: 120px; background-color: #ec6647; line-height: 50px;cursor: pointer; color: #fff; text-align: center;}
+section.main.con2 div.right_application div.submit {
+    display: inline-block;
+    max-width: 180px;
+    height: 50px;
+    vertical-align: middle;
+    margin-right: 10px;
+    box-sizing: border-box;
+}
+
+section.main.con2 div.right_application div.input_area input[type=text] {
+    border: 1px solid #d0d0d0;
+}
+
+section.main.con2 div.right_application div.checkbox {
+    margin-left: 50px;
+}
+
+section.main.con2 div.right_application div.submit {
+    max-width: 120px;
+    background-color: #ec6647;
+    line-height: 50px;
+    cursor: pointer;
+    color: #fff;
+    text-align: center;
+}
 
 section.main.con3 div.wrap,
-section.main.con4 div.wrap
-{padding: 120px 0px;}
-section.main div.text_area {width: 50%; display: inline-block;}
-section.main div.text_area h2{position: relative;}
-section.main div.text_area h2 img{width: auto; position: absolute; bottom: -10px; left: 75px;}
-section.main div.text_area h4 span{font-size: 40px; color: #ec6647; font-weight: bold;}
-section.main div.text_area h4{padding-left: 110px; margin-bottom: 10px;}
-section.main div.text_area p{padding-left: 110px; font-size: 18px; margin-bottom: 5px;}
-section.main div.text_area div.btn{background-color: #ec6647; margin-left: 110px; margin-top: 40px; color: #fff; font-weight: bold;
+section.main.con4 div.wrap {
+    padding: 120px 0px;
+}
+
+section.main div.text_area {
+    width: 50%;
+    display: inline-block;
+}
+
+section.main div.text_area h2 {
+    position: relative;
+}
+
+section.main div.text_area h2 img {
+    width: auto;
+    position: absolute;
+    bottom: -10px;
+    left: 75px;
+}
+
+section.main div.text_area h4 span {
+    font-size: 40px;
+    color: #ec6647;
+    font-weight: bold;
+}
+
+section.main div.text_area h4 {
+    padding-left: 110px;
+    margin-bottom: 10px;
+}
+
+section.main div.text_area p {
+    padding-left: 110px;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+section.main div.text_area div.btn {
+    background-color: #ec6647;
+    margin-left: 110px;
+    margin-top: 40px;
+    color: #fff;
+    font-weight: bold;
     -webkit-box-shadow: 3px 0px 5px 0px rgba(0, 0, 0, 0.38);
     -moz-box-shadow: 3px 0px 5px 0px rgba(0, 0, 0, 0.38);
-    box-shadow: 3px 0px 5px 0px rgba(0, 0, 0, 0.38);}
+    box-shadow: 3px 0px 5px 0px rgba(0, 0, 0, 0.38);
+}
 
-section.main.con3{background-image: url(../image/section-banner-gradiation_bg.png); background-size: auto; background-position:bottom; background-repeat: no-repeat;}
+section.main.con3 {
+    background-image: url(../image/section-banner-gradiation_bg.png);
+    background-size: auto;
+    background-position: bottom;
+    background-repeat: no-repeat;
+}
 
 
-section.main.con5{ background-size: cover; height: 630px; background-image: url(../image/main-secion5-bg.png);}
-section.main.con5 div.wrap{padding: 100px 0px;  text-align: center;}
-section.main.con5 h4{font-weight: bold; text-align: center; margin-bottom: 30px;}
-section.main.con5 p{font-size: 21px; text-align: center; margin-bottom: 5px; font-weight: bold; position: relative; width: auto; display: inline-block;}
-section.main.con5 p span{font-size: 21px; color: #ee3324;font-weight: bold;}
-section.main.con5 img{width: auto;}
-section.main.con5 img.obj{position: absolute; opacity: 0.3;}
-section.main.con5 img.obj.left{left: -50px; top: -10px;}
-section.main.con5 img.obj.right{right: -50px; top: 10px;}
-section.main.con5 div.forms{max-width: 710px; margin: 30px auto; text-align: left;}
-section.main.con5 div.forms ul li{
+section.main.con5 {
+    background-size: cover;
+    height: 630px;
+    background-image: url(../image/main-secion5-bg.png);
+}
+
+section.main.con5 div.wrap {
+    padding: 100px 0px;
+    text-align: center;
+}
+
+section.main.con5 h4 {
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+section.main.con5 p {
+    font-size: 21px;
+    text-align: center;
+    margin-bottom: 5px;
+    font-weight: bold;
+    position: relative;
+    width: auto;
+    display: inline-block;
+}
+
+section.main.con5 p span {
+    font-size: 21px;
+    color: #ee3324;
+    font-weight: bold;
+}
+
+section.main.con5 img {
+    width: auto;
+}
+
+section.main.con5 img.obj {
+    position: absolute;
+    opacity: 0.3;
+}
+
+section.main.con5 img.obj.left {
+    left: -50px;
+    top: -10px;
+}
+
+section.main.con5 img.obj.right {
+    right: -50px;
+    top: 10px;
+}
+
+section.main.con5 div.forms {
+    max-width: 710px;
+    margin: 30px auto;
+    text-align: left;
+}
+
+section.main.con5 div.forms ul li {
     display: inline-block;
     width: 48%;
     max-width: 350px;
@@ -225,22 +346,99 @@ section.main.con5 div.forms ul li{
     margin-right: 10px;
     /* margin: 5px; */
 }
+
 section.main.con5 div.forms ul li input,
-section.main.con5 div.forms ul li select
-{width: 100%; height: 60px; border: 1px solid #d0d0d0; color: #666;}
-section.main.con5 div.forms ul li input::placeholder{
+section.main.con5 div.forms ul li select {
+    width: 100%;
+    height: 60px;
+    border: 1px solid #d0d0d0;
+    color: #666;
+}
+
+section.main.con5 div.forms ul li input::placeholder {
     color: #666;
 }
 
 section.main.con5 div.forms ul li input:focus,
-section.main.con5 div.forms ul li select:focus{
+section.main.con5 div.forms ul li select:focus {
     border: 2px solid #ec6647;
 }
-section.main.con5 div.checkbox{max-width: 710px;margin: 0 auto;}
-section.main.con5 div.checkbox label{text-align: left;}
 
-section.main.con6 div.wrap{padding: 100px 0px;}
-section.main.con6 h4{text-align: center; font-weight: bold;}
-section.main.con6 h4 span{font-size: 40px; font-weight: bold; color: #ee3324;}
-section.main.con6 p{text-align: center; margin-top: 20px;}
+section.main.con5 div.checkbox {
+    max-width: 710px;
+    margin: 0 auto;
+}
 
+section.main.con5 div.checkbox label {
+    text-align: left;
+}
+
+section.main.con6 div.wrap {
+    padding: 100px 0px;
+}
+
+section.main.con6 h4 {
+    text-align: center;
+    font-weight: bold;
+}
+
+section.main.con6 h4 span {
+    font-size: 40px;
+    font-weight: bold;
+    color: #ee3324;
+}
+
+section.main.con6 p {
+    text-align: center;
+    margin-top: 20px;
+}
+
+section.main.con6 div.pc_slider {
+    text-align: center;
+    margin-top: 40px;
+    position: relative;
+}
+
+section.main.con6 div.pc_slider div.slider_wrap {
+    position: absolute;
+    width: 450px;
+    height: 300px;
+    background-color: #d0d0d0;
+    top: 46%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+footer{padding-bottom: 50px;}
+footer div.company_ci{text-align: center; padding: 30px 0px; border-top: 1px solid #d0d0d0; border-bottom: 1px solid #d0d0d0;}
+footer div.company_ci img{margin: 0px 20px;}
+footer div.gnb{border-bottom: 1px solid #d0d0d0;}
+
+footer div.foot{padding:40px 0px;}
+
+footer div.foot div.ci{
+    max-width: 140px;
+    display: inline-block;
+    margin-left: 30px;
+    vertical-align: top;
+
+}
+
+footer div.foot div.company_info{
+    width: 80%;
+    display: inline-block;
+    padding-left: 60px;
+}
+
+footer div.foot div.company_info ul li{display: inline; margin-right: 40px;}
+footer div.foot div.company_info ul li b{font-weight: bold;}
+
+footer address{
+    display: block;
+    width: 70%;
+    max-width: 630px;
+    color: #777;
+    font-size: 12px;
+    margin-top: 20px;
+    line-height: 20px;
+}
